package eu.telecomnancy.rpg.armure;


public class Robe extends Armor{
    public Robe(String name){
        super(name,4);

    }
}
