package eu.telecomnancy.rpg.armure;


public class Shield extends Armor {
    public Shield(String name){
        super(name,6);
    }
    
}
