package eu.telecomnancy.rpg.creator;

import eu.telecomnancy.rpg.personnage.GameCharacter;

public abstract class CharacterCreator {
    protected abstract GameCharacter createCharacter();
}
